--- a/web_client/src/index.html
+++ b/web_client/src/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Etoile de Martin - Soutenez la recherche contre le cancer de l'enfant !</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
     </head>
     <body>
         <div id="react"></div>
